--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
     - docker run -e CI=true ansariajmal/react-test-docker-multi npm run test
 
-before_success:
+after_success:
   - docker build -t ansariajmal/multi-client ./client
   - docker build -t ansariajmal/multi-nginx ./nginx
   - docker build -t ansariajmal/multi-server ./server
