--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,19 @@ after_success:
   - docker push ansariajmal2020/multi-nginx
   - docker push ansariajmal2020/multi-server
   - docker push ansariajmal2020/multi-worker
-        
-        
-        
+      
+ 
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-275654263810
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY      
         
         
         
